# experimental-design-multichannel

./: LICENSE  README.md  parameter_fit.py  pyproject.toml  simulations.py  tutorial.py
